--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="/Projects/Color_Flipper/index.html">Color Flipper</a></li>
                 <li><a href="/Projects/Counter/index.html">Counter</a></li>
+                <li><a href="/Projects/Reviews/index.html">Reviews</a></li>
             </ul>
         </section>
     </main>
