--- a/Projects/Reviews/index.html
+++ b/Projects/Reviews/index.html
@@ -28,13 +28,11 @@
             <!--Review-->
             <article class="review">
                 <div class="img-container">
-                    <img src="/Projects/Reviews/img/girl1.jpg" alt="profile photo" class="profile-image" id="person-img">
+                    <img src="#" alt="profile photo" class="profile-image" id="person-img">
                 </div>
-                <h4 id="author">Sara Jones</h4>
-                <p id="job">UX DESIGNER</p>
-                <p id="info">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nobis dolores natus tenetur temporibus animi laudantium nostrum totam in, officiis obcaecati.
-                </p>
+                <h4 id="author"></h4>
+                <p id="job"></p>
+                <p id="info"></p>
 
                 <!--Prev next buttons -->
                 <div class="btn-container">
