--- a/index.html
+++ b/index.html
@@ -5,20 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e2e4f541a2.js" crossorigin="anonymous"></script>
     <title>JS Projects</title>
 </head>
 <body>
     <header>
-        <h1>My JavaScript Projects</h1>
+        <h1>My JavaScript Projects </h1>
     </header>
     <main>
         <section>
-            <h4>Beginner</h4>
-            <ul>
+            <div class="level-title">
+                <i class="fab fa-js-square fa-2x"></i>
+                <h2>Beginner</h2>
+            </div>
+            
+            <ol class="projects">
                 <li><a href="/Projects/Color_Flipper/index.html">Color Flipper</a></li>
                 <li><a href="/Projects/Counter/index.html">Counter</a></li>
                 <li><a href="/Projects/Reviews/index.html">Reviews</a></li>
-            </ul>
+            </ol>
+        </section>
+        <!--Help text-->
+        <section id="help-section">
+                <h2>User tip</h2>
+                <p>Just choose the project you want to see</p>
+                <p>Scegli il progetto che vuoi vedere</p>
+                <p>Elige el proyecto que deseas ver</p>
         </section>
     </main>
 </body>
