--- a/Projects/Reviews/reviews.html
+++ b/Projects/Reviews/reviews.html
@@ -13,7 +13,7 @@
         <div class="nav-center">
             <h4>Reviews</h4>
             <ul class="nav-links">
-                <li><a href="/index.html">Back to main</a></li>
+                <li><a href="index.html">Back to main</a></li>
             </ul>
         </div>
     </nav>
