--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </div>
             
             <ol class="projects">
-                <li><a href="/Projects/Color_Flipper/index.html">Color Flipper</a></li>
-                <li><a href="/Projects/Counter/index.html">Counter</a></li>
-                <li><a href="/Projects/Reviews/index.html">Reviews</a></li>
+                <li><a href="Projects/Color_Flipper/color_fliper.html">Color Flipper</a></li>
+                <li><a href="Projects/Counter/counter.html">Counter</a></li>
+                <li><a href="Projects/Reviews/reviews.html">Reviews</a></li>
             </ol>
         </section>
         <!--Help text-->
