--- a/Projects/Color_Flipper/color_fliper.html
+++ b/Projects/Color_Flipper/color_fliper.html
@@ -14,7 +14,7 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="activePage">Simple</a></li>
                 <li><a href="random_hex.html">Random Hex</a></li>
-                <li><a href="index.html">Back to main</a></li>
+                <li><a href="/index.html">Back to main</a></li>
             </ul>
         </div>
     </nav>
