-UPDATE: Get random images in review page -FIX: a tag in color fliper -ADD: Gitignore

--- a/Projects/Color_Flipper/random_hex.html
+++ b/Projects/Color_Flipper/random_hex.html
@@ -12,9 +12,9 @@
         <div class="nav-center">
             <h4>Color Flipper</h4>
             <ul class="nav-links">
-                <li><a href="index.html">Simple</a></li>
+                <li><a href="color_fliper.html">Simple</a></li>
                 <li><a href="random_hex.html" class="activePage">Random Hex</a></li>
-                <li><a href="index.html">Back to main</a></li>
+                <li><a href="/index.html">Back to main</a></li>
             </ul>
         </div>
     </nav>
