--- a/Projects/Color_Flipper/color_fliper.html
+++ b/Projects/Color_Flipper/color_fliper.html
@@ -12,7 +12,7 @@
         <div class="nav-center">
             <h4>Color Flipper</h4>
             <ul class="nav-links">
-                <li><a href="index.html" class="activePage">Simple</a></li>
+                <li><a href="color_fliper.html" class="activePage">Simple</a></li>
                 <li><a href="random_hex.html">Random Hex</a></li>
                 <li><a href="/index.html">Back to main</a></li>
             </ul>
