--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="Projects/Color_Flipper/color_fliper.html">Color Flipper</a></li>
                 <li><a href="Projects/Counter/counter.html">Counter</a></li>
                 <li><a href="Projects/Reviews/reviews.html">Reviews</a></li>
+                <li><a href="Projects/CatWeb/imagen1.html">Random cat images</a></li>
             </ol>
         </section>
         <!--Help text-->
